--- a/src/desktop/apps/galleries_institutions/components/primary_carousel/templateNuart.jade
+++ b/src/desktop/apps/galleries_institutions/components/primary_carousel/templateNuart.jade
@@ -25,7 +25,7 @@ if length > 0
                 = show.loccation_width_dates
 
           button.gpc-follow-button.is-small.avant-garde-follow-button-black.follow-button.js-follow-button(
-            data-id= profile.id
+            data-id= profile.owner.href
           )
 
       - var index = 0
